# HypePlot

./: .gitignore  Dockerfile  docker-compose.yml  generate_index.py  hype.py  index.html  last-update.txt  pyproject.toml  style.css
.github/workflows/: generate-showcase.yml
docs/: index.html  style.css
outputs/artificial_intelligence/arxiv/: artificial_intelligence_arxiv_data.csv
outputs/artificial_intelligence/github/: artificial_intelligence_github_data.csv
outputs/artificial_intelligence/grants/: artificial_intelligence_grants_data.csv
outputs/artificial_intelligence/news/: artificial_intelligence_news_data.csv
outputs/artificial_intelligence/scholar/: artificial_intelligence_scholar_data.csv
outputs/artificial_intelligence/trends/: trends_annual_artificial_intelligence.csv
outputs/artificial_intelligence/youtube/: artificial_intelligence_youtube_data.csv
outputs/fhir/arxiv/: fhir_arxiv_data.csv
outputs/fhir/github/: fhir_github_data.csv
outputs/fhir/grants/: fhir_grants_data.csv
outputs/fhir/news/: fhir_news_data.csv
outputs/fhir/reddit/: fhir_reddit_data.csv
outputs/fhir/scholar/: fhir_scholar_data.csv
outputs/fhir/trends/: trends_annual_fhir.csv
outputs/fhir/youtube/: fhir_youtube_data.csv
sources/: __init__.py  arxiv.py  github.py  grants.py  news.py  packages.py  patents.py  reddit.py  scholar.py  trends.py  twitter.py  youtube.py
utils/: __init__.py  date_utils.py  extract_occurrences.py  utils_io.py
